<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="withText" />

    <item
        android:id="@+id/my_bookings_menu"
        android:icon="@drawable/ic_book"
        android:title="@string/my_bookings"
        app:showAsAction="withText" />

    <item
        android:id="@+id/history_menu"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        app:showAsAction="withText" />


    <item android:title="">

        <menu>

            <item
                android:id="@+id/logout_menu"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"
                app:showAsAction="withText" />

        </menu>

    </item>
</menu>