<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/iv_spot_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/palawan_img_1" />


        <RelativeLayout
            android:id="@+id/rv1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_spot_id"
                android:text="@string/name"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/tv_spot_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="25sp" />



            <TextView
                android:id="@+id/tv_spot_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_below="@id/tv_spot_name"
                />

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@id/tv_spot_description"
              android:orientation="horizontal">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="5dp"
                  android:text="@string/province"/>

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/palawan"
                  android:id="@+id/tv_spot_province"/>


          </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book"
                android:id="@+id/tv_spot_book"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>


        </RelativeLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>