<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:id="@+id/iv_profile_cover"
        android:src="@drawable/palawan_img_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-40dp"
        android:id="@+id/ll1"
        android:layout_below="@id/iv_profile_cover"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_bg"
            android:padding="20dp"
            android:text="@string/fl"
            android:textAlignment="center"
            android:textSize="40sp"
            />


        <TextView
            android:id="@+id/textView"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="40sp"
            />


    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/ll1"
       android:layout_marginHorizontal="20dp"
       android:layout_marginTop="10dp"
       android:orientation="vertical">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/about"
           android:textSize="30sp"/>



   </LinearLayout>




</RelativeLayout>